--- a/config/locales/views/password_resets/fr.yml
+++ b/config/locales/views/password_resets/fr.yml
@@ -4,7 +4,7 @@ fr:
     edit:
       title: Réinitialiser votre mot de passe
     new:
-      requested: Veuillez vérifier votre boite mail pour un lien de réinitialisation de votre mot de passe.
+      requested: Veuillez vérifier votre boîte mail pour un lien de réinitialisation de votre mot de passe.
       submit: Réinitialiser votre mot de passe
       title: Réinitialiser votre mot de passe
     update:
