--- a/config/locales/views/properties/fr.yml
+++ b/config/locales/views/properties/fr.yml
@@ -9,7 +9,7 @@ fr:
       area: Surface habitable
       area_placeholder: '2000'
       area_unit: Unité de mesure
-      country: pays
+      country: Pays
       country_placeholder: FR
       locality: Ville
       locality_placeholder: Paris
@@ -17,7 +17,7 @@ fr:
       postal_code: Code postal/ZIP
       postal_code_placeholder: '75000'
       region: Région/Département
-      region_placeholder: Ile-de-France
+      region_placeholder: Île-de-France
       subtype_prompt: Sélectionnez le type de propriété
       year_built: Année de construction
       year_built_placeholder: '2000'
