--- a/config/locales/views/enable_banking_items/zh-CN.yml
+++ b/config/locales/views/enable_banking_items/zh-CN.yml
@@ -2,16 +2,16 @@
 zh-CN:
   enable_banking_items:
     authorize:
-      authorization_failed: 启动授权失败：%{message}
+      authorization_failed: 启动授权失败
       bank_required: 请选择一家银行。
       invalid_redirect: 收到的授权 URL 无效。请重试或联系支持人员。
       redirect_uri_not_allowed: 不允许重定向。请在 Enable Banking 应用设置中配置 `%{callback_url}`。
       unexpected_error: 发生意外错误。请重试。
     callback:
-      authorization_error: 授权失败：%{error}
+      authorization_error: 授权失败
       invalid_callback: 回调参数无效。
       item_not_found: 未找到连接。
-      session_failed: 无法完成授权：%{message}
+      session_failed: 无法完成授权
       success: 已成功连接到您的银行。您的账户正在同步中。
       unexpected_error: 发生意外错误。请重试。
     complete_account_setup:
@@ -24,7 +24,7 @@ zh-CN:
       success: Enable Banking 连接已加入删除队列。
     link_accounts:
       already_linked: 所选账户已关联。
-      link_failed: 关联账户失败：%{error}
+      link_failed: 关联账户失败
       no_accounts_selected: 未选择任何账户。
       no_session: 无活跃的 Enable Banking 连接。请先连接一家银行。
       success: 成功关联了 %{count} 个账户。
@@ -37,7 +37,7 @@ zh-CN:
       link_enable_banking_title: 关联 Enable Banking
     reauthorize:
       invalid_redirect: 收到的授权 URL 无效。请重试或联系支持人员。
-      reauthorization_failed: 重新授权失败：%{message}
+      reauthorization_failed: 重新授权失败
     select_bank:
       cancel: 取消
       check_country: 请检查您的国家代码设置。
