fix(select_bank): update placeholder text and improve icon styling in bank selection view
Signed-off-by: xenos <66328734+xenos1337@users.noreply.github.com>

--- a/config/locales/views/enable_banking_items/en.yml
+++ b/config/locales/views/enable_banking_items/en.yml
@@ -1,6 +1,8 @@
 ---
 en:
   enable_banking_items:
+    select_bank:
+      search_placeholder: Search by bank name or BIC...
     link_existing_account:
       success: Account successfully linked to Enable Banking
       errors:
