--- a/config/locales/views/coinstats_items/en.yml
+++ b/config/locales/views/coinstats_items/en.yml
@@ -25,6 +25,9 @@ en:
       error: "Crypto wallet linking failed: %{message}."
     new:
       title: Link a Crypto Wallet with CoinStats
+      blockchain_fetch_error: Failed load Blockchains. Please try again later.
+      blockchain_fetch_auth_error: Failed to load Blockchains due to an authentication error. Please check the provider configuration.
+      blockchain_fetch_rate_limit_error: Failed to load Blockchains. Rate limit exceeded, please try again later.
       address_label: Address
       address_placeholder: Required
       blockchain_label: Blockchain
