--- a/config/locales/views/shared/zh-TW.yml
+++ b/config/locales/views/shared/zh-TW.yml
@@ -1,275 +1,14 @@
 ---
 zh-TW:
   shared:
-    account_link_list:
-      bank_account_pending: 銀行帳戶待處理中...
-      confirm_unlink: 您確定要取消此帳戶的連接嗎？未來將無法同步交易記錄。
-      cryptocurrency: 加密貨幣
-      delete: 刪除
-      disconnect: 斷開連接
-      edit: 編輯
-      edit_account: 編輯帳戶
-      enable_banking: Enable Banking
-      last_synced: 上次同步
-      link_new_account: 連接新帳戶
-      linked_account: 已連接帳戶
-      linked_accounts: 已連接帳戶
-      loading: 正在載入...
-      lunchflow: Lunchflow
-      manual_entry: 手動輸入
-      never: 從未
-      plaid: Plaid
-      simplefin: SimpleFIN
-      sync_in_progress: 同步中...
-      unlink_success: 帳戶已取消連接。
-      unlinked_account: 未連接帳戶
-    account_tabs:
-      account_details: 帳戶詳情
-      linked_accounts: 已連接帳戶
-    accounts_list:
-      account: 帳戶
-      accounts: 帳戶
-      all_accounts: 全部帳戶
-      balance: 餘額
-      last_synced: 上次同步
-      link_account: 連接帳戶
-      sync_date: 同步日期
-    breadcrumbs:
-      account: 帳戶
-      accounts: 帳戶
-      budgets: 預算
-      categories: 分類
-      home: 首頁
-      tags: 標籤
-      transactions: 交易記錄
-    buttons:
-      add: 新增
-      add_account: 新增帳戶
-      add_category: 新增分類
-      add_rule: 新增規則
-      back: 返回
+    confirm_modal:
+      accept: 確認
+      body_html: "<p>此操作將無法復原</p>"
       cancel: 取消
-      close: 關閉
-      copy: 複製
-      create: 建立
-      create_account: 建立帳戶
-      create_category: 建立分類
-      create_rule: 建立規則
-      create_tag: 建立標籤
-      delete: 刪除
-      delete_account: 刪除帳戶
-      delete_category: 刪除分類
-      delete_transaction: 刪除交易
-      dismiss: 關閉
-      download: 下載
-      edit: 編輯
-      edit_account: 編輯帳戶
-      edit_category: 編輯分類
-      export: 導出
-      filter: 篩選
-      go_back: 返回
-      import: 匯入
-      link_account: 連接帳戶
-      link_new_account: 連接新帳戶
-      new: 新建
-      open: 開啟
-      refresh: 重新整理
-      reset: 重設
-      save: 保存
-      search: 搜尋
-      settings: 設定
-      share: 分享
-      submit: 提交
-      sync: 同步
-      unlink: 斷開連接
-      update: 更新
-      view_all: 檢視全部
-    currencies:
-      aed: 阿聯酋迪拉姆 (AED)
-      aud: 澳大利亞元 (AUD)
-      bgn: 保加利亞列弗 (BGN)
-      bhd: 巴林第納爾 (BHD)
-      brl: 巴西雷亞爾 (BRL)
-      byn: 白俄羅斯盧布 (BYN)
-      cad: 加拿大元 (CAD)
-      chf: 瑞士法郎 (CHF)
-      clp: 智利比索 (CLP)
-      cny: 人民幣 (CNY)
-      cop: 哥倫比亞比索 (COP)
-      crc: 哥斯達黎加科朗 (CRC)
-      czk: 捷克克朗 (CZK)
-      dkk: 丹麥克朗 (DKK)
-      egp: 埃及鎊 (EGP)
-      eur: 歐元 (EUR)
-      gbp: 英鎊 (GBP)
-      hkd: 香港元 (HKD)
-      hrk: 克羅地亞庫納 (HRK)
-      huf: 匈牙利福林 (HUF)
-      idr: 印度尼西亞盧比亞 (IDR)
-      ils: 以色列謝克爾 (ILS)
-      inr: 印度盧比 (INR)
-      isk: 冰島克朗 (ISK)
-      jmd: 牙買加元 (JMD)
-      jpy: 日圓 (JPY)
-      krw: 韓元 (KRW)
-      kwd: 科威特第納爾 (KWD)
-      kzt: 哈薩克斯坦騰格 (KZT)
-      lbp: 黎巴嫩鎊 (LBP)
-      mxn: 墨西哥比索 (MXN)
-      myr: 馬來西亞林吉特 (MYR)
-      ngn: 奈及利亞奈拉 (NGN)
-      nok: 挪威克朗 (NOK)
-      nzd: 紐西蘭元 (NZD)
-      php: 菲律賓比索 (PHP)
-      pkr: 巴基斯坦盧比 (PKR)
-      pln: 波蘭茲羅提 (PLN)
-      qar: 卡達里亞爾 (QAR)
-      ron: 羅馬尼亞列伊 (RON)
-      rub: 俄羅斯盧布 (RUB)
-      sar: 沙烏地里亞爾 (SAR)
-      sek: 瑞典克朗 (SEK)
-      sgd: 新加坡元 (SGD)
-      thb: 泰國泰銖 (THB)
-      try: 土耳其里拉 (TRY)
-      twd: 新臺幣 (TWD)
-      uah: 烏克蘭赫夫尼亞 (UAH)
-      usd: 美元 (USD)
-      vef: 委內瑞拉玻利瓦爾 (VEF)
-      vnd: 越南盾 (VND)
-      zar: 南非蘭特 (ZAR)
-    date_picker:
-      apply: 套用
-      cancel: 取消
-      end_date: 結束日期
-      month: 月份
-      previous_month: 上個月
-      select_date: 選擇日期
-      start_date: 開始日期
-      today: 今天
-      year: 年份
-    date_range:
-      all_time: 所有時間
-      custom: 自訂
-      last_30_days: 最近 30 天
-      last_90_days: 最近 90 天
-      last_month: 上個月
-      last_quarter: 上個季度
-      last_week: 上週
-      last_year: 去年
-      this_month: 本月
-      this_quarter: 本季度
-      this_week: 本週
-      this_year: 今年
-      today: 今天
-      week: 週
-      yesterday: 昨天
-    dropzone:
-      filename: 檔案名稱
-      file_size: 檔案大小
-      upload: 上傳
-      upload_error_message: 上傳檔案出現問題。請嘗試使用較小的檔案。
-    empty_state:
-      action: 新建 %{resource}
-      description: 暫無 %{resource}。開始追蹤您的財務。
-      title: 未找到任何 %{resource}
-    expense_summary:
-      estimated_vs_actual: 預算 vs 實際
-      spending: 花費
-    filter_bar:
-      apply_filters: 套用篩選
-      clear_filters: 清除篩選
-      filter: 篩選
-    filter_list:
-      account: 帳戶
-      all_accounts: 全部帳戶
-      apply: 套用
-      category: 分類
-      no_categories: 未找到任何分類
-      no_items: 未找到任何項目
-      reset: 重設
-      search_placeholder: 搜尋...
-      tag: 標籤
-    footer:
-      about: 關於
-      contact: 聯絡方式
-      docs: 文件
-      feedback: 意見反饋
-      privacy: 隱私政策
-      support: 支援
-      terms: 服務條款
-    form:
-      cancel: 取消
-      required: 必填
-      submit: 提交
-    form_errors:
-      error_message: 出現錯誤，請檢查您的輸入。
-    header:
-      settings: 設定
-    modals:
-      account_deletion:
-        cancel: 取消
-        description: 此操作無法復原。刪除此帳戶將移除所有關聯的交易和資料。
-        submit: 刪除帳戶
-        title: 刪除帳戶
-      confirm: 確認
-      confirm_deletion:
-        cancel: 取消
-        description: 您確定要刪除嗎？此操作無法復原。
-        submit: 刪除
-        title: 確認刪除
-    number_input:
-      currency: 幣別
-    pagination:
-      next: 下一頁
-      of: 第 %{page} 頁，共 %{total} 頁
-      previous: 上一頁
-    search:
-      no_results: 未找到結果
-      placeholder: 搜尋...
-    spinner:
-      loading: 載入中...
-    stats:
-      accounts: 帳戶
-      categories: 分類
-      title: 概覽
-      total_accounts: 總帳戶數
-      total_balance: 總餘額
-      total_expenses: 總花費
-      total_income: 總收入
-      transactions: 交易記錄
-    table:
-      no_results: 未找到任何結果
-      showing: 顯示 %{count} 項結果
-    tabs:
-      transactions: 交易記錄
-    tag_list:
-      add_tag: 新增標籤
-      no_tags: 無
-      search_tags: 搜尋標籤
-    transaction_form:
-      account: 帳戶
-      amount: 金額
-      category: 分類
-      date: 日期
-      description: 描述
-      edit: 編輯交易
-      new: 新交易
-      notes: 備註
-      submit: 保存交易
-      tags: 標籤
-      title: 交易詳情
-    transaction_list:
-      amount: 金額
-      category: 分類
-      date: 日期
-      description: 描述
-      empty: 未找到任何交易
-      pending: 待處理
-      search_placeholder: 搜尋交易...
-      showing: 顯示 %{count} 項交易
-      tags: 標籤
-      total: 合計
-    upgrade_prompt:
-      button: 升級
-      description: 升級以獲得更多功能。
-      title: 升級帳戶
+      title: 您確定嗎？
+    money_field:
+      label: 金額
+    syncing_notice:
+      syncing: 正在同步帳戶資料...
+    trend_change:
+      no_change: "無變動"
