--- a/config/locales/views/rules/zh-TW.yml
+++ b/config/locales/views/rules/zh-TW.yml
@@ -1,40 +1,24 @@
 ---
 zh-TW:
   rules:
-    create:
-      failure: 規則建立失敗。
-      success: 規則建立成功。
-    destroy:
-      failure: 規則刪除失敗。
-      success: 規則已刪除。
-    edit:
-      title: 編輯規則
-    empty:
-      message: 暫無規則。您可建立規則以自動對交易進行分類和標籤。
-      new: 新建規則
-    form:
-      account_placeholder: 選擇帳戶
-      actions: 操作
-      amount: 金額
-      apply_tags: 套用標籤
-      assign_category: 分配分類
-      category_placeholder: 選擇分類
-      conditions: 條件
-      description: 根據您指定的條件自動對交易進行分類和標籤。
-      description_placeholder: 交易描述
-      enabled: 已啟用
-      exact_match: 精確符合
-      include_transfer: 包括轉帳交易
-      merchant_name: 商家名稱
-      merchant_name_placeholder: 商家名稱
-      new: 新建規則
-      rule_conditions: 規則條件
-      rule_name: 規則名稱
-      rule_name_placeholder: 例如：咖啡館費用
-      submit: 建立規則
-      tags_placeholder: 選擇或建立標籤
-      update: 更新規則
-    index:
-      title: 規則
-    new:
-      title: 建立新規則
+    no_action: 無動作
+    recent_runs:
+      title: 最近執行紀錄
+      description: 查看規則的執行歷史，包括成功/失敗狀態以及交易處理筆數。
+      unnamed_rule: 未命名規則
+      columns:
+        date_time: 日期/時間
+        execution_type: 類型
+        status: 狀態
+        rule_name: 規則名稱
+        transactions_counts:
+          queued: 已排入佇列
+          processed: 已處理
+          modified: 已修改
+      execution_types:
+        manual: 手動
+        scheduled: 排程
+      statuses:
+        pending: 待處理
+        success: 成功
+        failed: 失敗
