--- a/config/locales/views/tag/deletions/zh-TW.yml
+++ b/config/locales/views/tag/deletions/zh-TW.yml
@@ -5,9 +5,9 @@ zh-TW:
       create:
         deleted: 標籤已刪除
       new:
-        delete_and_leave_uncategorized: 刪除「%{tag_name}」並保留為未標記
-        delete_and_recategorize: 刪除「%{tag_name}」並重新分配標籤
-        delete_tag: 確認刪除標籤？
-        explanation: 「%{tag_name}」將從交易及其他可標記實體中移除。您也可以在下述選項中選擇一個新標籤進行重新分配，而不是保留為未標記狀態。
-        replacement_tag_prompt: 選擇新標籤
+        delete_and_leave_uncategorized: 刪除「%{tag_name}」
+        delete_and_recategorize: 刪除「%{tag_name}」並指定新標籤
+        delete_tag: 確定要刪除標籤嗎？
+        explanation: "「%{tag_name}」將會從交易紀錄及其他可標記項目中移除。除了讓這些項目保持無標籤狀態，您也可以在下方選擇一個新標籤進行替換。"
+        replacement_tag_prompt: 選擇標籤
         tag: 標籤
