--- a/config/locales/views/transfers/zh-TW.yml
+++ b/config/locales/views/transfers/zh-TW.yml
@@ -1,27 +1,30 @@
 ---
 zh-TW:
   transfers:
-    amount: 金額
-    confirmation_message: 轉帳已 %{action}
     create:
-      failure: 轉帳建立失敗。
-      success: 轉帳已建立。
-    date: 日期
-    delete:
-      confirm: 您確定要刪除此轉帳嗎？
-      failure: 轉帳刪除失敗。
-      success: 轉帳已刪除。
-    edit:
-      title: 編輯轉帳
-    empty: 暫無轉帳
-    from_account: 轉出帳戶
+      success: 轉帳已建立
+    destroy:
+      success: 轉帳已移除
+    form:
+      amount: 金額
+      date: 日期
+      expense: 支出
+      from: 從
+      income: 收入
+      select_account: 選擇帳戶
+      submit: 建立轉帳
+      to: 至
+      transfer: 轉帳
     new:
-      title: 新建轉帳
-    notes: 備註
-    success_message: 轉帳已更新
-    tags: 標籤
-    to_account: 轉入帳戶
-    transfers: 轉帳
+      title: 新增轉帳
+    show:
+      delete: 移除轉帳
+      delete_subtitle: 這將會移除轉帳連結，但不會刪除其對應的原始交易紀錄。
+      delete_title: 確定要移除轉帳嗎？
+      details: 詳情
+      note_label: 備註
+      note_placeholder: 為此筆轉帳新增備註
+      overview: 概覽
+      settings: 設定
     update:
-      failure: 轉帳更新失敗。
-      success: 轉帳已更新。
+      success: 轉帳已更新
