Replace hardcoded fallback transaction description with localized string

--- a/config/locales/views/transactions/en.yml
+++ b/config/locales/views/transactions/en.yml
@@ -1,6 +1,7 @@
 ---
 en:
   transactions:
+    unknown_name: Unknown transaction
     form:
       account: Account
       account_prompt: Select an Account
