Fix installment account type handling

--- a/config/locales/models/account/en.yml
+++ b/config/locales/models/account/en.yml
@@ -15,6 +15,7 @@ en:
       account/depository: Bank Account
       account/investment: Investment
       account/loan: Loan
+      account/installment: Installment
       account/other_asset: Other Asset
       account/other_liability: Other Liability
       account/property: Real Estate
