Add security measures for SSO-only users: block password resets, enforce SSO authentication, and refactor validations for JIT provisioning.

--- a/config/locales/views/password_resets/en.yml
+++ b/config/locales/views/password_resets/en.yml
@@ -2,6 +2,7 @@
 en:
   password_resets:
     disabled: Password reset via Sure is disabled. Please reset your password through your identity provider.
+    sso_only_user: Your account uses SSO for authentication. Please contact your administrator to manage your credentials.
     edit:
       title: Reset password
     new:
