--- a/config/locales/views/simplefin_items/update.en.yml
+++ b/config/locales/views/simplefin_items/update.en.yml
@@ -3,5 +3,5 @@ en:
     update:
       success: "SimpleFIN connection updated."
       errors:
-        blank_token: "Missing SimpleFin access token. Please provide a token or use Link Existing Accounts to proceed."
-        update_failed: "Failed to update SimpleFin connection: %{message}"
+        blank_token: "Missing SimpleFIN access token. Please provide a token or use Link Existing Accounts to proceed."
+        update_failed: "Failed to update SimpleFIN connection: %{message}"
