Refactor `ProviderSyncSummary` to improve maintainability
- Extracted `severity_color_class` to simplify severity-to-CSS mapping.
- Replaced `holdings_label` with `holdings_label_key` for streamlined localization.
- Updated locale file to separate `found` and `processed` translations for clarity.

--- a/config/locales/views/components/en.yml
+++ b/config/locales/views/components/en.yml
@@ -17,7 +17,8 @@ en:
       skipped: "Skipped: %{count}"
     holdings:
       title: Holdings
-      count: "%{label}: %{count}"
+      found: "Found: %{count}"
+      processed: "Processed: %{count}"
     health:
       title: Health
       rate_limited: "Rate limited %{time_ago}"
